edited loaners views

--- a/app/views/loaners/_form.html.erb
+++ b/app/views/loaners/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :borrowed_amonunt %>
+    <%= form.label "How much do you want to borrow?" %>
     <%= form.number_field :borrowed_amonunt %>
   </div>
 
   <div class="field">
-    <%= form.label :duration %>
+    <%= form.label "For how long?" %>
     <%= form.number_field :duration %>
   </div>
 
