--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -18,7 +18,7 @@
         <td><%= loaner.duration %></td>
         <td><%= link_to 'Show', loaner %></td>
         <td><%= link_to 'Edit', edit_loaner_path(loaner) %></td>
-        <td><%= link_to 'Destroy', loaner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete Record', loaner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
