Edit profile views

--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Loaners</h1>
+<h1> Welcome to your Dashboard, <%= current_user.profile.firstname %>! </h1>
 
+<h2> Here is your loan history: </h2>
 <table>
   <thead>
     <tr>
