--- a/app/views/loaners/show.html.erb
+++ b/app/views/loaners/show.html.erb
@@ -8,6 +8,7 @@
 <p>
   <strong>Duration:</strong>
   <%= @loaner.duration %>
+  <span>Weeks</span>
 </p>
 
 <%= link_to 'Edit', edit_loaner_path(@loaner) %> |
