--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -36,4 +36,4 @@
 </p>
 
 <%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Back', request.referrer, method: :get %>
