--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,13 @@
   </head>
 
   <body>
-      <%= render 'shared/navbar' %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <%= render 'shared/navbar' %>
+    <div class="container-fluid">
+      <div class="row my-4 justify-content-center">
+        <div class="col-8">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
