--- a/app/views/loaners/new.html.erb
+++ b/app/views/loaners/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', loaner: @loaner %>
 
-<%= link_to 'Back', loaners_path %>
+<div class="btn-box">
+    <%= link_to 'Back', loaners_path %>
+</div>
