--- a/app/views/loaners/show.html.erb
+++ b/app/views/loaners/show.html.erb
@@ -11,5 +11,7 @@
   <span>Weeks</span>
 </p>
 
-<%= link_to 'Edit', edit_loaner_path(@loaner) %> |
-<%= link_to 'Back', loaners_path %>
+<div class="btn-box">
+  <%= link_to 'Edit', edit_loaner_path(@loaner) %> |
+  <%= link_to 'Back', loaners_path %>
+</div>
