--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -36,4 +36,6 @@
 
 <br>
 
-<%= link_to 'New Profile', new_profile_path %>
+<div class="btn-box">
+  <%= link_to 'New Profile', new_profile_path %>
+</div>
