--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,13 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <div class="container-fluid">
-      <div class="row my-4 justify-content-center">
-        <div class="col-8">
-          <%= yield %>
+    <main class="container">
+      <div class="container-fluid">
+        <div class="row my-4 justify-content-center">
+          <div class="col-8">
+            <%= yield %>
+          </div>
         </div>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
