--- a/app/views/loaners/edit.html.erb
+++ b/app/views/loaners/edit.html.erb
@@ -2,5 +2,7 @@
 
 <%= render 'form', loaner: @loaner %>
 
-<%= link_to 'Show', @loaner %> |
-<%= link_to 'Back', loaners_path %>
+<div class="btn-box">
+    <%= link_to 'Show', @loaner %> |
+    <%= link_to 'Back', loaners_path %>
+</div>
