--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -26,5 +26,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New Loan', new_loaner_path %>
+<div class="btn-box">
+  <%= link_to 'New Loan', new_loaner_path %>
+</div>
