--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', profile: @profile %>
 
-<%= link_to 'Back', profiles_path %>
+<div class="btn-box">
+    <%= link_to 'Back', profiles_path %>
+</div>
