--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -3,7 +3,7 @@
 <h1> Welcome to your Dashboard, <%= current_user.profile.firstname %>! </h1>
 
 <h2> Here is your loan history: </h2>
-<table>
+<table class="showcase">
   <thead>
     <tr>
       <th>Borrowed amonunt</th>
