--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -68,8 +68,32 @@ label {
   width: 100%;
   max-width: 665px;
   margin: auto;
+  text-align: center; 
   .button_to {
     display: inline;
   }
-  background: rgb(170, 223, 205);
+  background: #5fb523;;
+}
+
+.showcase {
+  border-collapse: collapse;
+  max-width: 665px;
+  margin: auto;
+  width: 100%;
+  td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    background-color: #fff;
+  }
+
+  tr:hover {
+    background-color: #ddd;
+  }
+  th {
+    padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #5fb523;
+  color: white;
+  }
 }
