--- a/app/views/loaners/_form.html.erb
+++ b/app/views/loaners/_form.html.erb
@@ -13,9 +13,11 @@
 
   <div class="field">
     <%= form.label "How much do you want to borrow?", class: "form-label" %>
+    <div class="d-flex justify-content-center my-4" >
     <span class="font-weight-bold indigo-text mr-2 mt-1">N50,000</span>
     <%= form.number_field :borrowed_amonunt, type: "range", class: "form-range", min: "50000", max: "200000", id: "customRange2" %>
     <span class="font-weight-bold indigo-text ml-2 mt-1">N200,000</span>
+    </div>
   </div>
 
   <div class="field">
