--- a/app/views/loaners/show.html.erb
+++ b/app/views/loaners/show.html.erb
@@ -1,17 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Borrowed amonunt:</strong>
-  <%= @loaner.borrowed_amonunt %>
-</p>
+<h2>Loan Detail</h2>
 
-<p>
-  <strong>Duration:</strong>
-  <%= @loaner.duration %>
-  <span>Weeks</span>
-</p>
 
-<div class="btn-box">
-  <%= link_to 'Edit', edit_loaner_path(@loaner) %> |
-  <%= link_to 'Back', loaners_path %>
-</div>
+<%= form_with(model: @loaner) do |form| %>
+  <div class="field row mb-3">
+    <%= form.label "Borrowed Amount:", class: "form-label col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.number_field :borrowed_amonunt, readonly:true %>
+    </div>
+  </div>
+
+  <div class="field row mb-3">
+      <%= form.label "Duration in Weeks", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.number_field :duration, readonly:true %>
+      </div>
+  </div>
+
+  <div class="actions">
+    <div class="btn-box">
+      <%= link_to 'Edit', edit_loaner_path(@loaner) %> |
+      <%= link_to 'Back', loaners_path %>
+    </div>
+  </div>
+<% end %>
