--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -6,8 +6,8 @@
 <table class="showcase">
   <thead>
     <tr>
-      <th>Borrowed amonunt</th>
-      <th>Duration</th>
+      <th>Borrowed amonunt (=N=) </th>
+      <th>Duration (weeks) </th>
       <th colspan="3"></th>
     </tr>
   </thead>
