--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,9 +10,9 @@
         <% if user_signed_in? %>
             <li class="nav-item">
               <%= link_to 'My Profile', profile_path(current_user), class: 'nav-link' %> 
-            </li>
+            </li>            
             <li class="nav-item">
-                <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
             </li>
         <% else %>
             <li class="nav-item">
