remove edit and destroy from loans

--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -17,9 +17,7 @@
       <tr>
         <td><%= loaner.borrowed_amonunt %></td>
         <td><%= loaner.duration %></td>
-        <td><%= link_to 'Show', loaner %></td>
-        <td><%= link_to 'Edit', edit_loaner_path(loaner) %></td>
-        <td><%= link_to 'Delete Record', loaner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'View Details', loaner %></td>
       </tr>
     <% end %>
   </tbody>
