--- a/app/views/steps_after_registration/personal.html.erb
+++ b/app/views/steps_after_registration/personal.html.erb
@@ -1,17 +1,6 @@
 <h1>personal page</h1>
 
-<%= form_for @profile, url: wizard_path do |form| %>
-  <% if @profile.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
-
-      <ul>
-        <% @profile.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= render layout: 'form' do |form| %>
 
   <div class="field">
     <%= form.label :firstname %>
@@ -31,11 +20,6 @@
   <div class="field">
     <%= form.label :Address %>
     <%= form.text_field :Address %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-    or <%= link_to "skip this step", next_wizard_path %>
   </div>
 <% end %>
 
