--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,6 +5,27 @@
 <%= form_with(model: @profile) do |form| %>
   
   <div class="field row mb-3">
+      <%= form.label "Title", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.text_field :title, readonly:true %>
+      </div>
+  </div>
+
+  <div class="field row mb-3">
+      <%= form.label "Marital Status", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.text_field :marital_status, readonly:true %>
+      </div>
+  </div>
+
+  <div class="field row mb-3">
+      <%= form.label "Gender", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.text_field :gender, readonly:true %>
+      </div>
+  </div>
+
+  <div class="field row mb-3">
       <%= form.label "First Name", class: "col-sm-2 col-form-label" %>
       <div class="col-sm-10">
         <%= form.text_field :firstname, readonly:true %>
@@ -22,6 +43,20 @@
       <%= form.label "Date of Birth", class: "col-sm-2 col-form-label" %>
       <div class="col-sm-10">
         <%= form.text_field :DOB, readonly:true %>
+      </div>
+  </div>
+
+  <div class="field row mb-3">
+      <%= form.label "Phone Number", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.text_field :phone, readonly:true %>
+      </div>
+  </div>
+
+  <div class="field row mb-3">
+      <%= form.label "Nationality", class: "col-sm-2 col-form-label" %>
+      <div class="col-sm-10">
+        <%= form.text_field :nationality, readonly:true %>
       </div>
   </div>
 
