--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h2> My Profile</h2>
+<h1> My Profile</h1>
+
+<br/>
+
+<h2>Personal Information Section</h2>
 
 <%= form_with(model: @profile) do |form| %>
   
@@ -65,6 +69,42 @@
       <div class="col-sm-10">
         <%= form.text_field :Address, readonly:true %>
       </div>
+  </div>
+
+  <div class="field row mb-3">
+    <h2>Bank Section</h2>
+  </div>
+
+  <div class="field row mb-3">
+    <%= form.label "Account Name", class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :acc_name, readonly:true %>
+    </div>
+  </div>
+
+  <div class="field row mb-3">
+    <%= form.label "Bank Name", class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :bank_name, readonly:true %>
+    </div>
+  </div>
+
+    <div class="field row mb-3">
+    <%= form.label "Account Number", class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :acc_number, readonly:true %>
+    </div>
+  </div>
+
+    <div class="field row mb-3">
+    <%= form.label "Branch Name", class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :branch_name, readonly:true %>
+    </div>
+  </div>
+
+  <div class="field row mb-3">
+    <h2>Employer Section</h2>
   </div>
 
   <div class="field row mb-3">
