--- a/app/views/steps_after_registration/personal.html.erb
+++ b/app/views/steps_after_registration/personal.html.erb
@@ -27,6 +27,11 @@
     <%= form.date_select :DOB %>
   </div>
 
+  <div class="identification upload field">
+    <%= form.label "Upload valid means of Identification" %>   
+    <%= form.file_field :identification %>  
+  </div> 
+
   <div class="field">
     <%= form.label :Address %>
     <%= form.text_field :Address %>
