Modify MVCfor loaner

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -186,3 +186,10 @@ form {
     }
   }
 }
+.custom {
+  width: 100%;
+  border: 1px solid #bdbdbd;
+  border-radius: 4px;
+  padding: 8px;
+  background-color: #dcedc8;
+}
