--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -7,7 +7,7 @@
   <thead>
     <tr>
       <th>Borrowed amonunt (=N=) </th>
-      <th>Duration (weeks) </th>
+      <th>Duration (Days) </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +15,7 @@
   <tbody>
     <% @loaners.each do |loaner| %>
       <tr>
-        <td><%= loaner.borrowed_amonunt %></td>
+        <td><%= number_to_currency(loaner.amount, :unit => "NGN") %></td>
         <td><%= loaner.duration %></td>
         <td><%= link_to 'View Details', loaner %></td>
       </tr>
