--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -44,6 +44,15 @@
   </div>
 
   <div class="field row mb-3">
+    <%= form.label "Email", class: "form-label col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <div class="custom">
+      <%= current_user.email %>
+      </div>
+    </div>
+  </div>
+
+  <div class="field row mb-3">
       <%= form.label "Date of Birth", class: "col-sm-2 col-form-label" %>
       <div class="col-sm-10">
         <%= form.text_field :DOB, readonly:true %>
