--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
   <body>
     <%= render 'shared/navbar' %>
+    <%= render 'shared/sidebar' %>
     <main class="container">
       <div class="container-fluid">
         <div class="row my-4 justify-content-center">
