--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,29 +1,15 @@
-
-<nav class="navbar navbar-expand-lg navbar-light ">
-  <a class="navbar-brand" href="/">
-    <%= image_tag '/images/logo.png' %>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-        <% if user_signed_in? %>
-            <li class="nav-item">
-              <%= link_to 'My Profile', profile_path(current_user), class: 'nav-link' %> 
-            </li>            
-            <li class="nav-item">
-                <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
-            </li>
-        <% else %>
-            <li class="nav-item">
-                <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-                <%= link_to 'Register', new_user_registration_path, class: 'nav-link' %>
-            </li>
-        <% end %>
-    </ul>
+<% if user_signed_in? %>
+<header class="row">
+ <div class="naver col-left">
+    <a class="navbar-brand " href="/">
+      <%= image_tag '/images/logo.png' %>
+    </a>
   </div>
-</nav>
+
+  <div class="col-right">
+    <div class="container">
+      <div class="namer"><%= namer(yield(:name)) %></div>    
+    </div>
+  </div>
+</header>
+<% end %>
