--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -14,32 +14,31 @@ aside {
     outline:none;
     overflow-x: hidden;
     .user_info {
+      margin-top:55vh;
       h2{
         color: white;
         letter-spacing: 2px;
         text-transform: uppercase;
         padding-bottom: 2rem;
       }
-      .logo {
-        font-size: 1.7em;
-        color: #fff;
-        text-transform: uppercase;
-        letter-spacing: -1px;
-        padding-top: 9px;
-        font-weight: bold;
-      }
-      
-      .logo:hover {
-        color: #fff;
-        text-decoration: none;
-      }
-  
+        
       .profile {
         vertical-align: middle;
         border-radius: 100%;
-        height: 70px;
-        width: 70px;
-        margin-left: 110px;
+        height: 50px;
+        width: 50px;
+      }
+
+      ul {
+        padding-left: 0rem;
+        color: white;
+        font-size: 1rem;
+        li{
+          padding: 0rem;
+          &:hover {
+              background-color: #2b65a7;
+          }
+        }
       }
     }
     
