Add provider to header of all pages

--- a/app/views/loaners/index.html.erb
+++ b/app/views/loaners/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% provide(:name, "Dashboard") %>
+
 <h1> Welcome to your Dashboard, <%= current_user.profile.firstname %>! </h1>
 
 <h2> Here is your loan history: </h2>
