--- a/app/views/loaners/show.html.erb
+++ b/app/views/loaners/show.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h2>Loan Detail</h2>
-
+<% provide(:name, "Loan Details") %>
 
 <%= form_with(model: @loaner) do |form| %>
   <div class="field row mb-3">
