--- a/app/views/steps_after_registration/bank.html.erb
+++ b/app/views/steps_after_registration/bank.html.erb
@@ -1,5 +1,4 @@
-<h1>Detail of Bank to be Credit for Loan</h1>
-
+<% provide(:name, "Details of Bank to be Credited for Loan") %>
 <%= render layout: 'form' do |form| %>
 
   <div class="field">
