--- a/app/views/steps_after_registration/declaration.html.erb
+++ b/app/views/steps_after_registration/declaration.html.erb
@@ -1,4 +1,4 @@
-<h1>declaration page</h1>
+<% provide(:name, "Declaration Page") %>
 
 <h3>Kindly download and read the declaration carefuly and upload a signed copy when you are done.</h3> 
 
