--- a/app/views/steps_after_registration/employer.html.erb
+++ b/app/views/steps_after_registration/employer.html.erb
@@ -1,4 +1,4 @@
-<h1>employer and work  page</h1>
+<% provide(:name, "Employment/Business Information Page") %>
 
 <%= render layout: 'form' do |form| %>
 
