--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Profile</h1>
-
+<% provide(:name, "Editing My Profile") %>
 <%= render 'form', profile: @profile %>
 
 <div class="btn-box">
