--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,12 @@
 
 <% if user_signed_in? && current_user.admin? %>
   <div class="">
+  <% provide(:name, "Admin") %>
     <h2>Admin Users Only can see this</h2>
   </div>
 <% else %>
   <div class="">
+  <% provide(:name, "All Users") %>
     <h2>All Users can see this</h2>
   </div>
 <% end %>
