Adjust namer size and position

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -27,9 +27,9 @@ header {
       }
     }
     .namer {
-      padding-top: 3vh;
+      padding-top: 50px;
       text-align: center;
-      font-size: 1.3em;
+      font-size: 3em;
       color: #fff;
       text-transform: uppercase;
       letter-spacing: -1px;
