--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -6,6 +6,7 @@
 	padding: 40px;
 	transform: translate(-50%, -50%);
 	background: #0742af69;
+	// background: transparent;
 	box-sizing: border-box;
 	box-shadow: 0 15px 25px rgba(0,0,0,.6);
 	border-radius: 10px;
