--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,7 @@
 
 <h2>Personal Information Section</h2>
 
-<%= form_with(model: @profile) do |form| %>
+<%= form_with model: @profile, class: "form-scaff"  do |form| %>
   
   <div class="field row mb-3">
       <%= form.label "Title", class: "col-sm-2 col-form-label" %>
@@ -58,10 +58,16 @@
 
   <div class="field row mb-3">
     <%= form.label "Download Identification", class: "col-sm-2 col-form-label" %>
+    <% if @profile.identification? == false %>
+    <div class="col-sm-10">
+      <p>Kindly upload Means of Identifivation!</p>
+    </div>
+    <% else %>
     <div class="col-sm-10">
      <iframe src=<%= @profile.identification_url %> width="400" height="400" style="border: none;" overflow="hidden"> </iframe>
       <%= link_to 'Download Means of Identification', @profile.identification_url, target: "_blank" %>
     </div>
+    <% end %>
   </div>
 
   <div class="field row mb-3">
@@ -229,10 +235,16 @@
 
   <div class="field row mb-3">
     <%= form.label "Download Declaration", class: "col-sm-2 col-form-label" %>
-    <div class="col-sm-10">
-      <iframe src=<%= @profile.attachment_url %> width="600" height="780" style="border: none;"> </iframe>
-      <%= link_to 'Download Declaration', @profile.attachment_url %>
-    </div>
+    <% if @profile.attachment? == false %>
+      <div class="col-sm-10">
+        <p>Kindly Upload Declaration!</p>
+      </div>
+    <% else %>
+      <div class="col-sm-10">
+        <iframe src=<%= @profile.attachment_url %> width="600" height="780" style="border: none;"> </iframe>
+        <%= link_to 'Download Declaration', @profile.attachment_url %>
+      </div>
+    <% end %>
   </div>
 
   <td></td>
